	* Re-structured all admin JavaScript for better organization and efficiency.
	* Re-structured all admin CSS for better organization and efficiency.
	* Removed all "fancy selects" styling on admin UI select menus; we're now relying on default WordPress styling.
	* Added filter to remove frontend debug info from printing in source code; just filter `themeblvd_debug_info` to return `false`.
* Third-Party Plugin Compatibility
	* bbPress: "Lead Topic" enabled by default, with no more theme option to disable. Use filter `themeblvd_bbp_show_lead_topic` to disable.
	* bbPress: Added option to disable theme's bbPress styling at *Appearance > Theme Options > Plugins > bbPress*.
	* Gravity Forms: Added option to disable theme's Gravity Forms styling at *Appearance > Theme Options > Plugins > Gravity Forms*.
	* WooCommerce: Removed any legacy code for WooCommerce versions prior to 3.0.
	* WooCommerce: Added option to disable theme's Gravity Forms styling at *Appearance > Theme Options > Plugins > WooCommerce*.
	* WPML: Fixed WPML options showing on Theme Options, when WPML isn't installed.
* New: Added support for applying background shade to individual columns in the layout builder.
* Improvement: Swap TGMPA for [My Plugin Manager](http://mypluginmanager.com).
* Improvement: Better handling of retrieving FontAwesome icons for admin icon browser for more server setups, along with minor UI fixes.
* Improvement: On all theme bases, if no "Primary Navigation" menu is assigned, menu will not display (previously, only the Agent base behaved like this).
* Fixed: WooCommerce deprecated use of `WC_Cart::get_cart_url`.
* Removed: No more support for thumbnail borders; the filter `themeblvd_featured_thumb_frame` has been removed. Use CSS customization instead.
* Removed: No more support for [Theme Blvd Sliders](https://wordpress.org/plugins/theme-blvd-sliders/) plugin.
* Removed: No more html5shiv for HTML5 compatibility with IE8.